<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="repoInfo"
            type="br.com.githubfinder.data.model.Repo" />

        <variable
            name="callback"
            type="br.com.githubfinder.ui.repo_details.RepoDetailsFragment.Callback" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_repo"
        tools:context=".ui.repo_details.RepoDetailsFragment">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/fork_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/fork_icon_description"
            android:src="@drawable/fork_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <TextView
            android:id="@+id/fork_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/lightPaleGrey"
            android:text="@{String.valueOf(repoInfo.forksCount)}"
            app:layout_constraintBottom_toBottomOf="@+id/fork_icon"
            app:layout_constraintEnd_toStartOf="@+id/fork_icon"
            app:layout_constraintTop_toTopOf="@+id/fork_icon"
            tools:text="100" />

        <ImageView
            android:id="@+id/star_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/star_icon_description"
            android:src="@drawable/ic_star"
            app:layout_constraintBottom_toBottomOf="@+id/fork_text"
            app:layout_constraintEnd_toStartOf="@+id/fork_text"
            app:layout_constraintTop_toTopOf="@+id/fork_text" />

        <TextView
            android:id="@+id/star_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/lightPaleGrey"
            android:text="@{String.valueOf(repoInfo.stargazersCount)}"
            app:layout_constraintBottom_toBottomOf="@+id/star_icon"
            app:layout_constraintEnd_toStartOf="@+id/star_icon"
            app:layout_constraintTop_toTopOf="@+id/star_icon"
            tools:text="100" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/git_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/star_text">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="16dp"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="0dp"
                    app:cardForegroundColor="@null"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/description_icon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:contentDescription="@string/description_icon_desc"
                            android:src="@drawable/ic_turned_in_not"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/description"
                            style="@style/PrimaryText.Bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/repo_description"
                            app:layout_constraintBottom_toBottomOf="@+id/description_icon"
                            app:layout_constraintStart_toEndOf="@+id/description_icon"
                            app:layout_constraintTop_toTopOf="@+id/description_icon" />

                        <TextView
                            android:id="@+id/description_text"
                            style="@style/PrimaryText"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginBottom="8dp"
                            android:text="@{repoInfo.description}"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="@+id/description_icon"
                            app:layout_constraintTop_toBottomOf="@+id/description_icon"
                            tools:text="@string/bio_lorem_text_tools" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>


                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_creation_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="0dp"
                    app:cardForegroundColor="@null"
                    app:layout_constraintEnd_toEndOf="parent"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/card_description">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/creation_date_icon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:contentDescription="@string/creation_date_icon_description"
                            android:src="@drawable/ic_event_available"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />


                        <TextView
                            android:id="@+id/creation_date"
                            style="@style/PrimaryText.Bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="24dp"
                            android:text="@string/creation_date_text"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/creation_date_icon"
                            app:layout_constraintTop_toTopOf="@+id/creation_date_icon" />

                        <TextView
                            android:id="@+id/creation_date_text"
                            style="@style/PrimaryText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="24dp"
                            app:DateText="@{repoInfo.createdAt}"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="@+id/creation_date_icon"
                            app:layout_constraintTop_toBottomOf="@+id/creation_date_icon"
                            tools:text="01/04/1990" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <Button
            android:id="@+id/git_button"
            style="@style/StandardButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:backgroundTint="@color/white"
            android:text="@string/git_button_text"
            android:onClick="@{() -> callback.navigate(repoInfo.html_url)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
